<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditAC_Activity">
    <data>
        <variable
            name="activity"
            type="com.ccit19.merdog_client.EditAC_Activity" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <!-- Your scrolling content -->
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/ea_mainForm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="56dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/textView19"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/id"
                            app:layout_constraintBottom_toBottomOf="@+id/ea_edt_ID"
                            app:layout_constraintEnd_toStartOf="@+id/ea_edt_ID"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ea_edt_ID" />

                        <EditText
                            android:id="@+id/ea_edt_ID"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:ems="10"
                            android:enabled="false"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            app:layout_constraintBottom_toBottomOf="@+id/ea_edt_PW"
                            app:layout_constraintEnd_toStartOf="@+id/ea_edt_PW"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ea_edt_PW" />

                        <EditText
                            android:id="@+id/ea_edt_PW"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:ems="10"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_edt_ID" />

                        <TextView
                            android:id="@+id/ea_txv_passAlt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_edt_PW" />

                        <TextView
                            android:id="@+id/textView21"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/password_conf"
                            app:layout_constraintBottom_toBottomOf="@+id/ea_edt_ConPW"
                            app:layout_constraintEnd_toStartOf="@+id/ea_edt_ConPW"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ea_edt_ConPW" />

                        <EditText
                            android:id="@+id/ea_edt_ConPW"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:inputType="textPassword"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_txv_passAlt" />

                        <TextView
                            android:id="@+id/ea_txv_passconAlt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_edt_ConPW" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/ea_mainForm">

                        <TextView
                            android:id="@+id/textView27"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nic_name"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <EditText
                            android:id="@+id/ea_edt_Name"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:ems="10"
                            android:inputType="textPersonName"
                            app:layout_constraintEnd_toStartOf="@+id/ea_btn_namecheck"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView27" />

                        <Button
                            android:id="@+id/ea_btn_namecheck"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/overlap_check"
                            app:layout_constraintBottom_toBottomOf="@+id/ea_edt_Name"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ea_edt_Name" />

                        <TextView
                            android:id="@+id/ea_txv_nameAlt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_edt_Name" />

                        <TextView
                            android:id="@+id/textView28"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="휴대폰 번호"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_txv_nameAlt" />

                        <EditText
                            android:id="@+id/ea_edt_Phone"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:ems="10"
                            android:inputType="number"
                            app:layout_constraintEnd_toStartOf="@+id/ea_btn_certsend"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView28" />

                        <Button
                            android:id="@+id/ea_btn_certsend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/cert_send"
                            app:layout_constraintBottom_toBottomOf="@+id/ea_edt_Phone"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ea_edt_Phone" />

                        <TextView
                            android:id="@+id/ea_txv_phoneAlt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_edt_Phone" />

                        <TextView
                            android:id="@+id/textView29"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/cert_num"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_txv_phoneAlt" />

                        <EditText
                            android:id="@+id/ea_edt_CerNum"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:ems="10"
                            android:inputType="number"
                            app:layout_constraintEnd_toStartOf="@+id/ea_btn_check"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView29" />

                        <Button
                            android:id="@+id/ea_btn_check"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:text="@string/check"
                            app:layout_constraintBottom_toBottomOf="@+id/ea_edt_CerNum"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/ea_edt_CerNum" />

                        <TextView
                            android:id="@+id/ea_txv_cernumAlt"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/ea_edt_CerNum" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/ea_btn_conf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="32dp"
                        android:text="수정"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/ea_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|enterAlways" />


        </com.google.android.material.appbar.AppBarLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
