<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity">
    <data >

        <variable
            name="activity"
            type="com.ccit19.merdog_client.LoginActivity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorMain">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


<!--            <androidx.appcompat.widget.AppCompatImageView-->
<!--                android:id="@+id/message"-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="150dp"-->
<!--                android:layout_marginTop="56dp"-->
<!--                android:text="Merdog"-->
<!--                android:textSize="30sp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toTopOf="parent"-->
<!--                app:srcCompat="@drawable/mainlogo" />-->

            <TextView
                android:id="@+id/message"
                android:layout_width="200dp"
                android:layout_height="150dp"
                android:layout_marginTop="56dp"
                android:text="머독"
                android:textSize="30sp"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/message">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_perm_identity_24px"
                    android:drawablePadding="8dp"
                    android:hint="@string/id" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userPw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_24px"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/checkwrong"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

            <TextView
                android:id="@+id/forgetac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="계정정보가 기억나지 않으시나요?"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/checkwrong" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/e_login"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:text="@string/sign_in"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgetac" />

            <com.kakao.usermgmt.LoginButton
                android:id="@+id/com_kakao_login"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/e_login" />

            <ImageButton
                android:id="@+id/naver_login"
                style="@style/Widget.AppCompat.ImageButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:background="@color/browser_actions_divider_color"
                android:contentDescription="TODO"
                android:scaleType="fitXY"
                android:src="@drawable/naverlogin_green"
                app:layout_constraintEnd_toEndOf="@+id/com_kakao_login"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="@+id/com_kakao_login"
                app:layout_constraintTop_toBottomOf="@+id/com_kakao_login" />

            <Button
                android:id="@+id/sgin_up"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_marginTop="32dp"
                android:text="@string/sign_up"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/naver_login" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>